kubernetes/yaml/pre/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: primeapps
---
apiVersion: v1
kind: Namespace
metadata:
  name: serverless
