kubernetes/yaml/pre/admin.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-admin
  namespace: primeapps
  labels:
    k8s-app: "primeapps-admin"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: primeapps-admin
  template:
    metadata:
      labels:
        k8s-app: primeapps-admin
    spec:
      volumes:
        - name: "self-signed-ssl"
          secret:
            secretName: primeapps-admin-selfsigned-ssl
        - name: admin-data-volume
          persistentVolumeClaim:
            claimName: primapps-admin            
      containers:
        - name: primeapps-admin
          image: primeapps/primeapps-admin:1.19.328.2-debian
          volumeMounts:
            - mountPath: "/etc/self-signed-ssl"
              name: self-signed-ssl
            - mountPath: "/data"
              name: admin-data-volume              
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-admin-service
  namespace: primeapps
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-admin
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-admin-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
spec:
  tls:
    - hosts:
        - "admin.eu4.primeapps.io"
      secretName: primeapps-wildcard-ssl
  rules:
    - host: "admin.eu4.primeapps.io"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-admin-service
              servicePort: 80
