kubernetes/yaml/pre/app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: primeapps-app
  namespace: primeapps
  labels:
    k8s-app: "primeapps-app"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: primeapps-app
  template:
    metadata:
      labels:
        k8s-app: primeapps-app
    spec:
      volumes:
        - name: "self-signed-ssl"
          secret:
            secretName: primeapps-app-selfsigned-ssl
      containers:
        - name: primeapps-app
          image: primeapps/primeapps-auth:1.19.132.2-debian
          volumeMounts:
            - mountPath: "/etc/self-signed-ssl"
              name: self-signed-ssl
---
kind: Service
apiVersion: v1
metadata:
  name: primeapps-app-service
  namespace: primeapps
spec:
  type: "ClusterIP"
  selector:
    k8s-app: primeapps-app
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: primeapps-app-ingress
  namespace: primeapps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
spec:
  tls:
    - hosts:
        - "*.eu4.primeapps.app"
      secretName: primeapps-app-wildcard-ssl
  rules:
    - host: "*.eu4.primeapps.app"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: primeapps-app-service
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/server-snippet: |-
      add_header X-Robots-Tag "noindex, nofollow";
  name: primeapps-custom-ingress
spec:
  rules:
    - host: app.custom-domain.com
      http:
        paths:
          - backend:
              serviceName: primeapps-app-service
              servicePort: 80
            path: /
  tls:
    - hosts:
        - app.custom-domain.com
      secretName: custom-domain-letsencrypt
